# ultimate-image-gen-mcp

./: KEY_ISSUES_AND_IMPROVEMENTS.md  MANIFEST.in  README.md  pyproject.toml
src/: __init__.py  server.py
src/config/: constants.py  settings.py
src/core/: __init__.py  exceptions.py  validation.py
src/prompts/: __init__.py  image_prompts.py
src/services/: background_removal.py  difference_matting.py  gemini_client.py  image_service.py  prompt_enhancer.py
src/tools/: __init__.py  batch_generate.py  generate_app_icon.py  generate_image.py
tests/: conftest.py  test_app_icon_guard.py  test_background_removal.py  test_difference_matting.py  test_validation.py
